--- a/templates/authentification/index.html.twig
+++ b/templates/authentification/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
     <h1>{{ controller_name }}</h1>
-<form action="/user" method="post">
+<form action="/connexion" method="post">
   <fieldset>
     <legend>Bienvenue</legend>
     <div class="form-group row">
