--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,6 +5,7 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
         <link href= "https://bootswatch.com/4/lux/bootstrap.css" rel="stylesheet">
+			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
         {% endblock %}
         {% block javascripts %}{% endblock %}
     </head>
@@ -29,6 +30,13 @@
         <div class="dropdown-menu">
           <a class="dropdown-item" href="/dashboard">Dashboard</a>
           <a class="dropdown-item" href="/deconnexion">Déconnexion</a>
+        </div>
+      </li>
+       <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">genre</a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="/listeGenre">liste</a>
+          <a class="dropdown-item" href="/formGenre">genre</a>
         </div>
       </li>
     </ul>
