--- a/templates/connect.html.twig
+++ b/templates/connect.html.twig
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}
-            <link href= "https://bootswatch.com/4/spacelab/bootstrap.css" rel="stylesheet">
-        {% endblock %}
+    <meta charset="UTF-8">
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    {% block stylesheets %}
+    <link href="https://bootswatch.com/4/lux/bootstrap.css" rel="stylesheet">
+    {% endblock %}
 
-        {% block javascripts %}{% endblock %}
+    {% block javascripts %}{% endblock %}
     </head>
     <body>
         <div class="container">
